# managarm

./: .clang-format  .clang-format-ignore  .clang-format-include  .clang-tidy  .gitignore  .mailmap  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  build.sh  configure  makefile  meson.build  meson.options  meson_options.txt  rules.makefile  toplevel.makefile
core/: meson.build
core/arch/: meson.build
core/arch/include/arch/: dma_pool.hpp
core/arch/src/: dma_pool.cpp
core/drm/: dir.makefile  meson.build
core/drm/aarch64-src/: copy-fp.S
core/drm/riscv64-src/: copy-fp.S
core/drm/src/: core.cpp  device.cpp  fourcc.cpp  ioctl.cpp  mode-object.cpp  property.cpp
core/drm/x86_64-src/: copy-sse.S
core/include/core/: align.hpp  bpf.hpp  cancel-events.hpp  clock.hpp  cmdline.hpp  device-path.hpp  dispatch.hpp  id-allocator.hpp  kernel-logs.hpp  logging.hpp  mount.hpp  netlink.hpp  queue.hpp  smbios.hpp  tty.hpp
core/lib/: clock.cpp  cmdline.cpp  kernel-logs.cpp  smbios.cpp
core/lib/bpf/: bpf.cpp
core/nic/: meson.build
core/nic/src/: buffer.cpp  core.cpp
core/virtio/: dir.makefile  meson.build
core/virtio/src/: core.cpp
drivers/clocktracker/: meson.build
drivers/clocktracker/src/: main.cpp
drivers/kbd/: dir.makefile  input-atkbd.yml  meson.build  runsvr-atkbd.service
drivers/kbd/src/: main.cpp  ps2.hpp  spec.hpp
drivers/kbd/src/mouse/: elantech.cpp  elantech.hpp
drivers/kernletcc/: meson.build
drivers/kernletcc/src/: common.hpp  fafnir.cpp  main.cpp
drivers/libblockfs/: dir.makefile  meson.build
drivers/libblockfs/include/: blockfs.hpp  scsi.hpp
drivers/libblockfs/src/: cache.hpp  checksums.hpp  common-ops.hpp  common.hpp  ext2fs.cpp  ext2fs.hpp  fs.hpp  gpt.cpp  gpt.hpp  libblockfs.cpp  libfs.cpp  metadata-cache.cpp  metadata-cache.hpp  raw.cpp  raw.hpp  scsi.cpp  trace.hpp
drivers/libblockfs/src/btrfs/: btrfs.cpp  btrfs.hpp  ops.cpp  pretty-print.hpp  spec.hpp  types.hpp
drivers/libblockfs/src/ext2/: ext2fs.cpp  ext2fs.hpp  extents.hpp  ops.cpp  ops.hpp
drivers/libevbackend/: dir.makefile  meson.build
drivers/libevbackend/include/: libevbackend.hpp
drivers/libevbackend/src/: libevbackend.cpp
drivers/libsound/: meson.build
drivers/libsound/include/: sound.hpp
drivers/libsound/src/: card.cpp  device.cpp  rules.cpp  rules.hpp
drivers/uart/: dir.makefile  meson.build
drivers/uart/src/: main.cpp  spec.hpp
eir/: build.sh  dir.makefile  makefile  meson.build
eir/include/eir/: interface.hpp
eir/src/: link.ld  link.x  main.c  main.cpp  multiboot.S  multiboot.asm
hel/: Doxyfile.in  dir.makefile  meson.build
hel/include/: hel-stubs-aarch64.h  hel-stubs-riscv64.h  hel-stubs-x86_64.h  hel-stubs.h  hel-syscalls.h  hel.h  helx.hpp  meson.build
hel/include/helix/: await.hpp  ipc-structs.hpp  ipc.hpp  memory.hpp  passthrough-fd.hpp  timer.hpp
hel/src/: globals.cpp  passthrough-fd.cpp
kernel/eir/: generic32_link.x  generic64_link.x  i386.cpp  load32.S  load64.S  main.cpp  main.hpp  meson.build  x86_64.cpp
kernel/eir/arch/arm/: arch.cpp  cpio.hpp  (+5 more)
kernel/eir/generic/: cmdline.cpp  cpio.hpp  debug.cpp  elf-relocate.cpp  elf_init.cpp  framebuffer.cpp  generic-platform.cpp  global-constructors.cpp  main-function.cpp  main.cpp  memory-layout.cpp
kernel/eir/multiboot1/: multiboot1.S  multiboot1.cpp
kernel/eir/multiboot2/: multiboot2.S  multiboot2.cpp
kernel/eir/stivale/: stivale.S  stivale_link.x
kernel/thor/: link.x  meson.build
kernel/thor/extra-src/: trampoline.S
kernel/thor/generic/: accessors.hpp  address-space.cpp  address-space.hpp  asid.cpp  cancel.cpp  cancel.hpp  core.cpp  core.hpp  cpu-data.cpp  credentials.cpp  cursor.cpp  debug.cpp  descriptor.hpp  error.hpp  event.cpp  executor-context.cpp  fiber.cpp  fiber.hpp  font-8x16.cpp  futex.cpp  futex.hpp  gdbserver.cpp  hel.cpp  int-call.cpp  io.cpp  io.hpp  iommu.cpp  ipc-queue.cpp  ipc-queue.hpp  ipl.cpp  irq.cpp  irq.hpp  kasan.cpp  kerncfg.cpp  kerncfg.hpp  kernel-heap.cpp  kernel-io.cpp  kernel-log.cpp  kernel-mutexes.cpp  kernel-stack.cpp  (+40 more)
kernel/thor/private-include/: assert.h  ctype.h  string.h
kernel/thor/system/: boot-screen.cpp  boot-screen.hpp  fb.cpp  fb.hpp
kernel/thor/thor-internal/: address-space.hpp  cancel.hpp  descriptor.hpp  event.hpp  kernlet.hpp  thread.hpp  virtualization.hpp
libarch/: dir.makefile  meson.build
libarch/include/arch/: bit.hpp  bits.hpp  dma_pool.hpp  dma_structs.hpp  io_space.hpp  mem_space.hpp  register.hpp  variable.hpp
libarch/src/: dma_pool.cpp
mbus/: dir.makefile  meson.build
mbus/src/: main.cpp  mbus.frigg_pb.hpp
posix/subsystem/: dir.makefile  meson.build
posix/subsystem/src/: cgroupfs.cpp  cgroupfs.hpp  clock.cpp  clock.hpp  clocks.cpp  clocks.hpp  common.hpp  coredump.cpp  debug-options.hpp  dev_fs.cpp  dev_fs.hpp  device.cpp  device.hpp  drvcore.cpp  drvcore.hpp  epoll.cpp  epoll.hpp  eventfd.cpp  eventfd.hpp  exec.cpp  exec.hpp  extern_fs.cpp  extern_fs.hpp  extern_socket.cpp  extern_socket.hpp  fifo.cpp  fifo.hpp  file.cpp  file.hpp  fs.cpp  fs.hpp  fuse.cpp  fuse.hpp  gdbserver.cpp  gdbserver.hpp  inotify.cpp  inotify.hpp  interval-timer.cpp  interval-timer.hpp  ld-server.frigg_pb.hpp  (+46 more)
protocols/clock/: clock.bragi  clock.proto  meson.build
protocols/fs/: dir.makefile  fs.bragi  fs.proto  meson.build
protocols/fs/src/: client.cpp  file-locks.cpp  server.cpp
protocols/hw/: dir.makefile  hw.bragi  hw.proto  meson.build
protocols/hw/src/: client.cpp
protocols/kernlet/: kernlet.bragi  kernlet.proto  meson.build
protocols/kernlet/src/: compiler.cpp
protocols/mbus/: dir.makefile  mbus.bragi  meson.build
protocols/mbus/src/: client.cpp  client_ng.cpp
protocols/ostrace/: meson.build  ostrace.bragi
protocols/ostrace/src/: ostrace.cpp
protocols/posix/: meson.build  posix.bragi  posix.proto
protocols/svrctl/: meson.build  svrctl.bragi  svrctl.proto
protocols/svrctl/src/: server.cpp
protocols/usb/: dir.makefile  meson.build  usb.bragi  usb.proto
protocols/usb/src/: .client.cpp.swp  api.cpp  client.cpp  hub.cpp  server.cpp  usb.cpp  util.cpp
(+1402 files in other folders)
