option('build_kernel', type: 'boolean', value: false)
option('build_drivers', type: 'boolean', value: false)
option('build_tools', type: 'boolean', value: false)
option('kernel_ubsan', type: 'boolean', value: false)
option('kernel_kasan', type: 'boolean', value: false)
option('kernel_log_allocations', type: 'boolean', value: false)
